xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__axis_node_test_parse.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
assertion_line: 450
expression: "parse(axis_node_test, tokens(\"text()\"), Cow::Borrowed(&namespaces))"
---
Ok((Child, KindTest(Text)))
