xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__predicate_pattern_dot_equals.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
assertion_line: 347
expression: "pattern::Pattern::parse(\".[.='10']\", &namespaces, &variable_names)"
---
Ok(Predicate(PredicatePattern(
  predicates: [
    Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(Expr(Some(Expr([
            Binary(BinaryExpr(
              operator: GenEq,
              left: PathExpr(
                steps: [
                  PrimaryExpr(ContextItem),
                ],
              ),
              right: PathExpr(
                steps: [
                  PrimaryExpr(Literal(String("10"))),
                ],
              ),
            )),
          ])))),
        ],
      )),
    ]),
  ],
)))
