xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__root_intersect_with_other_path.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
assertion_line: 1043
expression: "pattern::Pattern::parse(\"(/) intersect foo\", &namespaces, &variable_names)"
---
Ok(Expr(Path(PathExpr(
  root: Relative,
  steps: [
    PostfixExpr(PostfixExpr(
      expr: BinaryExpr(BinaryExpr(
        operator: Intersect,
        left: Path(PathExpr(
          root: AbsoluteSlash,
          steps: [],
        )),
        right: Path(PathExpr(
          root: Relative,
          steps: [
            AxisStep(AxisStep(
              forward: Child,
              node_test: NameTest(Name(OwnedName(
                local_name_str: "foo",
                namespace_str: "",
                prefix_str: "",
              ))),
              predicates: [],
            )),
          ],
        )),
      )),
      predicates: [],
    )),
  ],
))))
