xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__text_predicate_numeric_pattern.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
assertion_line: 390
expression: "pattern::Pattern::parse(\"text()[1]\", &namespaces, &variable_names)"
---
Ok(Expr(Path(PathExpr(
  root: Relative,
  steps: [
    AxisStep(AxisStep(
      forward: Child,
      node_test: KindTest(Text),
      predicates: [
        Expr([
          Path(PathExpr(
            steps: [
              PrimaryExpr(Literal(Integer((Positive, [
                1,
              ])))),
            ],
          )),
        ]),
      ],
    )),
  ],
))))
