xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__text_predicate_pattern.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
assertion_line: 821
expression: "pattern::Pattern::parse(\"text()[.='10']\", &namespaces, &variable_names)"
---
Ok(Expr(Path(PathExpr(
  root: Relative,
  steps: [
    AxisStep(AxisStep(
      forward: Child,
      node_test: KindTest(Text),
      predicates: [
        Expr([
          Path(PathExpr(
            steps: [
              PrimaryExpr(Expr(Some(Expr([
                Binary(BinaryExpr(
                  operator: GenEq,
                  left: PathExpr(
                    steps: [
                      PrimaryExpr(ContextItem),
                    ],
                  ),
                  right: PathExpr(
                    steps: [
                      PrimaryExpr(Literal(String("10"))),
                    ],
                  ),
                )),
              ])))),
            ],
          )),
        ]),
      ],
    )),
  ],
))))
